--- a/EDANevada.ipynb
+++ b/EDANevada.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP4vn3qUR8Khw1AE6Pt7blE",
+      "authorship_tag": "ABX9TyO3ZStxIVBewLz4pkwOSbM0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2829,6 +2829,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Leaving aside the general categories such as: reataurant, bar and cafe.\n",
+        "\n",
+        "They stand out: Fast Food, Sandwich shop, Caterer, Takeout reataurant, Bakery and American restaurant.\n",
+        "Being the most repeated categories of establishments in Nevada"
+      ],
+      "metadata": {
+        "id": "PB4DSkiaGTlc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import warnings\n",
@@ -3059,6 +3071,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Highlighting Mexican food"
+      ],
+      "metadata": {
+        "id": "vIfBZVfqGIbl"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Mayor promedio de puntaje segun categoria\n",
@@ -3113,9 +3134,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "High rating, many reviews (more than 175):\n",
+        "\n",
+        "*   Bulgarian restaurant\n",
+        "*   Russian restaurant"
+      ],
+      "metadata": {
+        "id": "Xd883jHEFzvt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Russian and Bulgarian restaurant\n",
         "\n",
-        "Anteriormente vimos que solo hay 1 Bulgarian restaurant en Nevada, excelente puntaje y bastante concurrido"
+        "Previously we saw that there is only 1 Bulgarian restaurant and 1 Russian reastaurant in Nevada, excellent rating and quite busy."
       ],
       "metadata": {
         "id": "FLPEkSnqaICW"
@@ -3178,7 +3211,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Low rating, many reviews (more than 175):\n",
+        "\n",
+        "*   Hamburger restaurant\n",
+        "*   Hotel\n",
+        "*   Dance Club\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "bgxgBLx78zKw"
       }
