--- a/EDANevada.ipynb
+++ b/EDANevada.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO3ZStxIVBewLz4pkwOSbM0",
+      "authorship_tag": "ABX9TyMJ8WWPN65kOhk9s6GAxKYg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3217,6 +3217,15 @@
         "*   Hamburger restaurant\n",
         "*   Hotel\n",
         "*   Dance Club\n",
+        "\n",
+        "Low rating, many reviews (more than 100):\n",
+        "*   Indian restaurant\n",
+        "*   Adult entertainment club\n",
+        "*   Buffet restaurant\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
