--- a/Cassandra_SQL_DataPipeline/YelpApiDraft.ipynb
+++ b/Cassandra_SQL_DataPipeline/YelpApiDraft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3063,6 +3063,473 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting cassandra-driver"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 22.0.3; however, version 23.2.1 is available.\n",
+      "You should consider upgrading via the 'C:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  Downloading cassandra_driver-3.28.0-cp310-cp310-win_amd64.whl (2.8 MB)\n",
+      "     ---------------------------------------- 2.8/2.8 MB 3.3 MB/s eta 0:00:00\n",
+      "Collecting geomet<0.3,>=0.1\n",
+      "  Downloading geomet-0.2.1.post1-py3-none-any.whl (18 kB)\n",
+      "Requirement already satisfied: six>=1.9 in c:\\users\\marco\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from cassandra-driver) (1.16.0)\n",
+      "Requirement already satisfied: click in c:\\users\\marco\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from geomet<0.3,>=0.1->cassandra-driver) (8.0.4)\n",
+      "Requirement already satisfied: colorama in c:\\users\\marco\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from click->geomet<0.3,>=0.1->cassandra-driver) (0.4.4)\n",
+      "Installing collected packages: geomet, cassandra-driver\n",
+      "Successfully installed cassandra-driver-3.28.0 geomet-0.2.1.post1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install cassandra-driver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cassandra.cluster import Cluster\n",
+    "from cassandra.query import SimpleStatement, dict_factory\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "cluster = Cluster(['186.87.6.161'], port='9042', protocol_version = 5) #IP del servidor y el puerto estandar de cassandra 9042\n",
+    "session = cluster.connect('henry')\n",
+    "session.row_factory = dict_factory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cassandra.cluster.ResultSet at 0x201c9caead0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create historical Tracking Table\n",
+    "\n",
+    "session.execute(\n",
+    "    \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS stores_Updates (\n",
+    "        business_id text,\n",
+    "        date_update text,\n",
+    "        updated boolean,\n",
+    "        PRIMARY KEY ((business_id))\n",
+    "        );\n",
+    "    \"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'keyspace_name': 'henry', 'type': 'table', 'name': 'business'}\n",
+      "{'keyspace_name': 'henry', 'type': 'table', 'name': 'reviews'}\n",
+      "{'keyspace_name': 'henry', 'type': 'table', 'name': 'reviews_yelp'}\n",
+      "{'keyspace_name': 'henry', 'type': 'table', 'name': 'stores'}\n",
+      "{'keyspace_name': 'henry', 'type': 'table', 'name': 'stores2'}\n",
+      "{'keyspace_name': 'henry', 'type': 'table', 'name': 'stores_updates'}\n",
+      "{'keyspace_name': 'henry', 'type': 'table', 'name': 'tips'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in session.execute(\"describe tables;\"):\n",
+    "  print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SortedSet([' ', \"'\", ',', 'A', 'C', 'F', 'J', 'S', 'W', 'a', 'c', 'e', 'g', 'h', 'i', 'l', 'm', 'n', 'o', 'p', 'r', 's', 't', 'w', 'y'])\n",
+      "SortedSet([' ', ',', 'F', 'M', 'R', 'S', 'a', 'c', 'd', 'e', 'f', 'i', 'k', 'l', 'n', 'o', 'p', 'r', 's', 't', 'u', 'y'])\n",
+      "SortedSet([' ', ',', 'B', 'N', 'P', 'a', 'b', 'e', 'f', 'g', 'h', 'i', 'l', 'r', 's', 't', 'u'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['nx8a-0rWqmkQDtYtXK0nhg', 'y0C_5eo2xI5vwVfeAIK8fg', 'pllHVuJtx8aM_RhUZ1MpNg']"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load some data into stores_updates\n",
+    "id_list = []\n",
+    "states = ['NV','TX','CA','FL','NY']\n",
+    "query = \"\"\" \n",
+    "        SELECT * \n",
+    "        FROM business\n",
+    "        LIMIT 20\n",
+    "        \"\"\"\n",
+    "for row in session.execute(query):\n",
+    "  if row['state'] in states:\n",
+    "        print(row['categories'])\n",
+    "        id_list.append(row['business_id'])\n",
+    "\n",
+    "id_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the three ids into stores_update\n",
+    "\n",
+    "from datetime import date\n",
+    "\n",
+    "current_date = date.today()\n",
+    "current_date = str(current_date)\n",
+    "\n",
+    "statement = \"INSERT INTO stores_updates(business_id, date_update, updated) VALUES (?,?,?)\"\n",
+    "insert = session.prepare(statement)\n",
+    "\n",
+    "\n",
+    "for id_item in id_list:\n",
+    "    session.execute(insert, (id_item, current_date, True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'business_id': 'nx8a-0rWqmkQDtYtXK0nhg', 'date_update': '2023-08-23', 'updated': True}\n",
+      "{'business_id': 'y0C_5eo2xI5vwVfeAIK8fg', 'date_update': '2023-08-23', 'updated': True}\n",
+      "{'business_id': 'pllHVuJtx8aM_RhUZ1MpNg', 'date_update': '2023-08-23', 'updated': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking the Insert\n",
+    "for row in session.execute(\"SELECT * FROM stores_updates\",):\n",
+    "  print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AiFYkNiVKa98FQidK0REyQ', 'p_HeJssTSDwiT4K261H_kw', 'ndUuRwcL2wYBOXXgLTJyEQ', 'rlnPCCbQOwGeO_fipq68TA', 'eC4QcCTdKtIT16Fh14jnfw', 'ui9XXukBp4SAjVnCEuiUFw', '0CLCzdedGT2DPjkYM52Tqg', 'QyuF5F7cj02WXIF2nOgzBg', '_GM64s10iPSFiieLrIEhXA', 'aENSv8fq4oFZ92Ysbt08aA']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Now I have to test that I can make a query getting Business_ID that:\n",
+    "1. Are not inserted in stores_updates\n",
+    "2. Are Inserted but have a False condition on 'Updated'\n",
+    "\"\"\"\n",
+    "# Initialize id_list\n",
+    "id_list = []\n",
+    "\n",
+    "# Query the Table business\n",
+    "states = ['NV','TX','CA','FL','NY']\n",
+    "\n",
+    "# Construct the query with the updated id_list\n",
+    "query = f\"\"\" \n",
+    "        SELECT business_id,state \n",
+    "        FROM business\n",
+    "        \"\"\"\n",
+    "\n",
+    "statement = SimpleStatement(query, fetch_size = 5000)\n",
+    "business_table_ids = session.execute(statement, timeout=None)\n",
+    "\n",
+    "# Get information from stores_updates\n",
+    "\n",
+    "dictionary = {'business_id' : [], 'updated':[] }\n",
+    "query = f\"\"\" \n",
+    "        SELECT business_id,updated \n",
+    "        FROM stores_updates\n",
+    "        \"\"\"\n",
+    "\n",
+    "statement = SimpleStatement(query, fetch_size = 5000)\n",
+    "updates_table = session.execute(statement, timeout=None)\n",
+    "\n",
+    "for row in updates_table:\n",
+    "    dictionary['business_id'].append(row['business_id'])\n",
+    "    dictionary['updated'].append(row['updated'])\n",
+    "\n",
+    "df_updates = pd.DataFrame(dictionary)\n",
+    "\n",
+    "\n",
+    "for row in business_table_ids:\n",
+    "    if row['state'] in states:\n",
+    "        # Check in stores_updates\n",
+    "        if row['business_id'] not in list(df_updates['business_id']):\n",
+    "            id_list.append(row['business_id'])\n",
+    "        else:\n",
+    "            # Check if the store is updated\n",
+    "            cond = df_updates[df_updates['business_id'] == str(row['business_id'])]['updated']\n",
+    "            try:\n",
+    "                if (list(cond)[0]) == False:\n",
+    "                        id_list.append(row['business_id'])\n",
+    "            except:\n",
+    "                print((list(cond)[0]))\n",
+    "\n",
+    "        \n",
+    "    if len(id_list) >= 10:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_update_reviews():\n",
+    "    \"\"\"\n",
+    "    Now I have to query to get Business_ID that:\n",
+    "    1. Are not inserted in stores_updates\n",
+    "    2. Are Inserted but have a False condition on 'Updated'\n",
+    "    \"\"\"\n",
+    "    # Initialize id_list\n",
+    "    id_list = []\n",
+    "\n",
+    "    # Query the Table business\n",
+    "    states = ['NV','TX','CA','FL','NY']\n",
+    "\n",
+    "    # Construct the query with the updated id_list\n",
+    "    query = f\"\"\" \n",
+    "            SELECT business_id,state \n",
+    "            FROM business\n",
+    "            \"\"\"\n",
+    "\n",
+    "    statement = SimpleStatement(query, fetch_size = 5000)\n",
+    "    business_table_ids = session.execute(statement, timeout=None)\n",
+    "\n",
+    "    # Get information from stores_updates\n",
+    "\n",
+    "    dictionary = {'business_id' : [], 'updated':[] }\n",
+    "    query = f\"\"\" \n",
+    "            SELECT business_id,updated \n",
+    "            FROM stores_updates\n",
+    "            \"\"\"\n",
+    "\n",
+    "    statement = SimpleStatement(query, fetch_size = 5000)\n",
+    "    updates_table = session.execute(statement, timeout=None)\n",
+    "\n",
+    "    for row in updates_table:\n",
+    "        dictionary['business_id'].append(row['business_id'])\n",
+    "        dictionary['updated'].append(row['updated'])\n",
+    "\n",
+    "    df_updates = pd.DataFrame(dictionary)\n",
+    "\n",
+    "\n",
+    "    for row in business_table_ids:\n",
+    "        if row['state'] in states:\n",
+    "            # Check in stores_updates\n",
+    "            if row['business_id'] not in list(df_updates['business_id']):\n",
+    "                id_list.append(row['business_id'])\n",
+    "            else:\n",
+    "                # Check if the store is updated\n",
+    "                cond = df_updates[df_updates['business_id'] == str(row['business_id'])]['updated']\n",
+    "                try:\n",
+    "                    if (list(cond)[0]) == False:\n",
+    "                            id_list.append(row['business_id'])\n",
+    "                except:\n",
+    "                    print((list(cond)[0]))\n",
+    "\n",
+    "            \n",
+    "        if len(id_list) >= 10:\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "    credits = 10\n",
+    "    for i in range(credits):\n",
+    "        print(id_list[i])\n",
+    "        #get_new_reviews()\n",
+    "\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AiFYkNiVKa98FQidK0REyQ\n",
+      "p_HeJssTSDwiT4K261H_kw\n",
+      "ndUuRwcL2wYBOXXgLTJyEQ\n",
+      "rlnPCCbQOwGeO_fipq68TA\n",
+      "eC4QcCTdKtIT16Fh14jnfw\n",
+      "ui9XXukBp4SAjVnCEuiUFw\n",
+      "0CLCzdedGT2DPjkYM52Tqg\n",
+      "QyuF5F7cj02WXIF2nOgzBg\n",
+      "_GM64s10iPSFiieLrIEhXA\n",
+      "aENSv8fq4oFZ92Ysbt08aA\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_update_reviews()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verizon Authorized Retailer - GoWireless\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n# 2. Create Request\\n# Get the Store ID \\nbusiness_id = store_to_update['business_id']\\nbusiness_name = store_to_update['name']\\n\\n# Create Request\\nyelp_api = YelpAPI(API_Key)\\nresponse = yelp_api.reviews_query(id=business_id, limit = 50)\\n\\n# 3. Create DF\\n# Parse Response\\nreviews = response['reviews']\\n\\n# Create dict\\ndictionary = {'review_id' : [],\\n            'user_id': [],\\n            'name': [],\\n            'business_id':[],\\n            'Platform':[],\\n            'rating':[],\\n            'date': [],\\n            'text':[],\\n            'comment':[],\\n}\\n\\nfor review in reviews:\\n    dictionary['review_id'].append(review['id'])\\n    dictionary['user_id'].append(review['user']['id'])\\n    dictionary['name'].append(business_name)\\n    dictionary['business_id'].append(business_id)\\n    dictionary['date'].append(review['time_created'])\\n    dictionary['Platform'].append('Yelp')\\n    dictionary['rating'].append(review['rating'])\\n    dictionary['text'].append(review['text'])\\n    dictionary['comment'].append('')\\n\\n\\ndf_yelp_api = pd.DataFrame(dictionary)\\n\\n# 4. LOAD df_yelp_api into CASSANDRA\\n\\n# 5. UPDATE row in CASSANDRA\\n\\n\\nreturn \\n\""
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from credentials import yelp_api_key \n",
+    "\n",
+    "#def get_new_reviews(API_Key = yelp_api_key, id_to_query):\n",
+    "\n",
+    "API_Key = yelp_api_key\n",
+    "id_to_query = 'AiFYkNiVKa98FQidK0REyQ'\n",
+    "# 1. Get the business name to update\n",
+    "query = f\"\"\" \n",
+    "            SELECT name \n",
+    "            FROM business\n",
+    "            WHERE business_id = '{id_to_query}'\n",
+    "            \"\"\"\n",
+    "\n",
+    "statement = SimpleStatement(query, fetch_size = 5000)\n",
+    "answer = session.execute(statement, timeout=None)\n",
+    "\n",
+    "for row in answer:\n",
+    "    business_name = row['name']\n",
+    "    print(business_name)\n",
+    "\"\"\"\n",
+    "# 2. Create Request\n",
+    "# Get the Store ID \n",
+    "business_id = store_to_update['business_id']\n",
+    "business_name = store_to_update['name']\n",
+    "\n",
+    "# Create Request\n",
+    "yelp_api = YelpAPI(API_Key)\n",
+    "response = yelp_api.reviews_query(id=business_id, limit = 50)\n",
+    "\n",
+    "# 3. Create DF\n",
+    "# Parse Response\n",
+    "reviews = response['reviews']\n",
+    "\n",
+    "# Create dict\n",
+    "dictionary = {'review_id' : [],\n",
+    "            'user_id': [],\n",
+    "            'name': [],\n",
+    "            'business_id':[],\n",
+    "            'Platform':[],\n",
+    "            'rating':[],\n",
+    "            'date': [],\n",
+    "            'text':[],\n",
+    "            'comment':[],\n",
+    "}\n",
+    "\n",
+    "for review in reviews:\n",
+    "    dictionary['review_id'].append(review['id'])\n",
+    "    dictionary['user_id'].append(review['user']['id'])\n",
+    "    dictionary['name'].append(business_name)\n",
+    "    dictionary['business_id'].append(business_id)\n",
+    "    dictionary['date'].append(review['time_created'])\n",
+    "    dictionary['Platform'].append('Yelp')\n",
+    "    dictionary['rating'].append(review['rating'])\n",
+    "    dictionary['text'].append(review['text'])\n",
+    "    dictionary['comment'].append('')\n",
+    "\n",
+    "\n",
+    "df_yelp_api = pd.DataFrame(dictionary)\n",
+    "\n",
+    "# 4. LOAD df_yelp_api into CASSANDRA\n",
+    "\n",
+    "# 5. UPDATE row in CASSANDRA\n",
+    "\n",
+    "\n",
+    "return \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -3133,7 +3600,7 @@
     "\n",
     "def load_update_reviews():\n",
     "\n",
-    "    credits = 400\n",
+    "    credits = 0\n",
     "\n",
     "    for i in range(credits):\n",
     "\n",
