code for review updates almost done

--- a/Cassandra_SQL_DataPipeline/YelpApiDraft.ipynb
+++ b/Cassandra_SQL_DataPipeline/YelpApiDraft.ipynb
@@ -3178,16 +3178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SortedSet([' ', \"'\", ',', 'A', 'C', 'F', 'J', 'S', 'W', 'a', 'c', 'e', 'g', 'h', 'i', 'l', 'm', 'n', 'o', 'p', 'r', 's', 't', 'w', 'y'])\n",
-      "SortedSet([' ', ',', 'F', 'M', 'R', 'S', 'a', 'c', 'd', 'e', 'f', 'i', 'k', 'l', 'n', 'o', 'p', 'r', 's', 't', 'u', 'y'])\n",
-      "SortedSet([' ', ',', 'B', 'N', 'P', 'a', 'b', 'e', 'f', 'g', 'h', 'i', 'l', 'r', 's', 't', 'u'])\n"
+      " , ', ,, A, C, F, J, S, W, a, c, e, g, h, i, l, m, n, o, p, r, s, t, w, y\n",
+      " , ,, F, M, R, S, a, c, d, e, f, i, k, l, n, o, p, r, s, t, u, y\n",
+      " , ,, B, N, P, a, b, e, f, g, h, i, l, r, s, t, u\n"
      ]
     },
     {
@@ -3196,7 +3196,7 @@
        "['nx8a-0rWqmkQDtYtXK0nhg', 'y0C_5eo2xI5vwVfeAIK8fg', 'pllHVuJtx8aM_RhUZ1MpNg']"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3212,7 +3212,8 @@
     "        \"\"\"\n",
     "for row in session.execute(query):\n",
     "  if row['state'] in states:\n",
-    "        print(row['categories'])\n",
+    "        category_str = ', '.join(row['categories'])\n",
+    "        print(category_str)\n",
     "        id_list.append(row['business_id'])\n",
     "\n",
     "id_list"
@@ -3431,30 +3432,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Verizon Authorized Retailer - GoWireless\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\"\\n# 2. Create Request\\n# Get the Store ID \\nbusiness_id = store_to_update['business_id']\\nbusiness_name = store_to_update['name']\\n\\n# Create Request\\nyelp_api = YelpAPI(API_Key)\\nresponse = yelp_api.reviews_query(id=business_id, limit = 50)\\n\\n# 3. Create DF\\n# Parse Response\\nreviews = response['reviews']\\n\\n# Create dict\\ndictionary = {'review_id' : [],\\n            'user_id': [],\\n            'name': [],\\n            'business_id':[],\\n            'Platform':[],\\n            'rating':[],\\n            'date': [],\\n            'text':[],\\n            'comment':[],\\n}\\n\\nfor review in reviews:\\n    dictionary['review_id'].append(review['id'])\\n    dictionary['user_id'].append(review['user']['id'])\\n    dictionary['name'].append(business_name)\\n    dictionary['business_id'].append(business_id)\\n    dictionary['date'].append(review['time_created'])\\n    dictionary['Platform'].append('Yelp')\\n    dictionary['rating'].append(review['rating'])\\n    dictionary['text'].append(review['text'])\\n    dictionary['comment'].append('')\\n\\n\\ndf_yelp_api = pd.DataFrame(dictionary)\\n\\n# 4. LOAD df_yelp_api into CASSANDRA\\n\\n# 5. UPDATE row in CASSANDRA\\n\\n\\nreturn \\n\""
+       "'\\n# 4. LOAD df_yelp_api into CASSANDRA\\n\\n# 5. UPDATE row in CASSANDRA\\n\\n\\nreturn \\n'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from yelpapi import YelpAPI\n",
     "from credentials import yelp_api_key \n",
-    "\n",
+    "import pandas \n",
     "#def get_new_reviews(API_Key = yelp_api_key, id_to_query):\n",
     "\n",
     "API_Key = yelp_api_key\n",
@@ -3471,12 +3466,12 @@
     "\n",
     "for row in answer:\n",
     "    business_name = row['name']\n",
-    "    print(business_name)\n",
-    "\"\"\"\n",
+    "    #print(business_name)\n",
+    "\n",
     "# 2. Create Request\n",
     "# Get the Store ID \n",
-    "business_id = store_to_update['business_id']\n",
-    "business_name = store_to_update['name']\n",
+    "business_id = id_to_query\n",
+    "#business_name = store_to_update['name']\n",
     "\n",
     "# Create Request\n",
     "yelp_api = YelpAPI(API_Key)\n",
@@ -3512,21 +3507,360 @@
     "\n",
     "df_yelp_api = pd.DataFrame(dictionary)\n",
     "\n",
-    "# 4. LOAD df_yelp_api into CASSANDRA\n",
-    "\n",
-    "# 5. UPDATE row in CASSANDRA\n",
-    "\n",
-    "\n",
-    "return \n",
-    "\"\"\""
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>date</th>\n",
+       "      <th>text</th>\n",
+       "      <th>comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SsPxab-FPyO6_8iDTkHsyg</td>\n",
+       "      <td>nz35ACyuUYvHMJcTzhaePQ</td>\n",
+       "      <td>Verizon Authorized Retailer - GoWireless</td>\n",
+       "      <td>AiFYkNiVKa98FQidK0REyQ</td>\n",
+       "      <td>Yelp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-03-12</td>\n",
+       "      <td>Our experience has been worse than we imagined...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gJNsO7mN7V0R0W0V0nSDgQ</td>\n",
+       "      <td>sF5RBM-d1oYUYn33EzIchA</td>\n",
+       "      <td>Verizon Authorized Retailer - GoWireless</td>\n",
+       "      <td>AiFYkNiVKa98FQidK0REyQ</td>\n",
+       "      <td>Yelp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-03-22</td>\n",
+       "      <td>I went in on Thursday the 14th of February thi...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LVMTuDbA95dzRbyID6Q0kQ</td>\n",
+       "      <td>6w5-MJx83f4ZBGeMSfUJ7A</td>\n",
+       "      <td>Verizon Authorized Retailer - GoWireless</td>\n",
+       "      <td>AiFYkNiVKa98FQidK0REyQ</td>\n",
+       "      <td>Yelp</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021-10-16</td>\n",
+       "      <td>Ryan was working at this location (1017 Broadw...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                review_id                 user_id   \n",
+       "0  SsPxab-FPyO6_8iDTkHsyg  nz35ACyuUYvHMJcTzhaePQ  \\\n",
+       "1  gJNsO7mN7V0R0W0V0nSDgQ  sF5RBM-d1oYUYn33EzIchA   \n",
+       "2  LVMTuDbA95dzRbyID6Q0kQ  6w5-MJx83f4ZBGeMSfUJ7A   \n",
+       "\n",
+       "                                       name             business_id Platform   \n",
+       "0  Verizon Authorized Retailer - GoWireless  AiFYkNiVKa98FQidK0REyQ     Yelp  \\\n",
+       "1  Verizon Authorized Retailer - GoWireless  AiFYkNiVKa98FQidK0REyQ     Yelp   \n",
+       "2  Verizon Authorized Retailer - GoWireless  AiFYkNiVKa98FQidK0REyQ     Yelp   \n",
+       "\n",
+       "   rating        date                                               text   \n",
+       "0       1  2023-03-12  Our experience has been worse than we imagined...  \\\n",
+       "1       1  2023-03-22  I went in on Thursday the 14th of February thi...   \n",
+       "2       5  2021-10-16  Ryan was working at this location (1017 Broadw...   \n",
+       "\n",
+       "  comment  \n",
+       "0          \n",
+       "1          \n",
+       "2          "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_yelp_api['date'] = pd.to_datetime(df_yelp_api['date']).dt.strftime('%Y-%m-%d')\n",
+    "df_yelp_api.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>review_date</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>review_text</th>\n",
+       "      <th>stars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>rdIJRrXkdrBhpAsJGNs2gw</td>\n",
+       "      <td>yrO3kYVPv3vD5fsE7dcMWw</td>\n",
+       "      <td>2014-04-03</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>In all the years I've spent searching the \"Cit...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>rdIJRrXkdrBhpAsJGNs2gw</td>\n",
+       "      <td>lmGibbdxH2Bf9dBJf1CTGQ</td>\n",
+       "      <td>2018-03-04</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>After reading mostly positive reviews on Yelp,...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  user_id             business_id review_date  cool  funny   \n",
+       "0  rdIJRrXkdrBhpAsJGNs2gw  yrO3kYVPv3vD5fsE7dcMWw  2014-04-03     1      1  \\\n",
+       "1  rdIJRrXkdrBhpAsJGNs2gw  lmGibbdxH2Bf9dBJf1CTGQ  2018-03-04     6      0   \n",
+       "\n",
+       "   useful                                        review_text  stars  \n",
+       "0       2  In all the years I've spent searching the \"Cit...      4  \n",
+       "1      10  After reading mostly positive reviews on Yelp,...      5  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking the Insert\n",
+    "dictionary =  { 'user_id': [],\n",
+    "                'business_id': [],\n",
+    "                'review_date': [],\n",
+    "                'cool': [],\n",
+    "                'funny': [],\n",
+    "                'useful': [],\n",
+    "                'review_text': [],\n",
+    "                'stars': [] }\n",
+    "\n",
+    "\n",
+    "\n",
+    "for row in session.execute(\"SELECT * FROM reviews_yelp LIMIT 2\",):\n",
+    "  dictionary['user_id'].append(row['user_id'])\n",
+    "  dictionary['business_id'].append(row['business_id'])\n",
+    "  dictionary['review_date'].append(row['review_date'])\n",
+    "  dictionary['cool'].append(row['cool'])\n",
+    "  dictionary['funny'].append(row['funny'])\n",
+    "  dictionary['useful'].append(row['useful'])\n",
+    "  dictionary['review_text'].append(row['review_text'])\n",
+    "  dictionary['stars'].append(row['stars'])\n",
+    "\n",
+    "df_aux = pd.DataFrame(dictionary)\n",
+    "df_aux.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'user_id': '6w5-MJx83f4ZBGeMSfUJ7A', 'business_id': 'AiFYkNiVKa98FQidK0REyQ', 'review_date': Date(18916), 'cool': 0, 'funny': 0, 'review_text': \"Ryan was working at this location (1017 Broadway Ave. in Boise) when we came in. It's my understanding he's usually working in a more corporate customer service office for Verizon versus selling phones, but he really hooked my husband and I up. He provided great customer service and was honest with us when we decided to come back to Verizon (I was a loyalty customer with Verizon before getting temporarily duped by AT&T). Verizon gave us a way better deal than AT&T, the staff was honest with us, and Ryan really went above and beyond to explain deals to us clearly and listen to our needs. He helped us set up a business plan, which saved us even more money, and got us a much better plan in the process. We walked out of AT&T with broken phones that barely worked on WiFi. We walked out Verizon as loyalty customers for life. 10/10\", 'stars': 5, 'useful': 0}\n",
+      "2Filas cargadas.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ndictionary =\\n{'user_id': [],\\n 'business_id': [],\\n  'review_date': [],\\n   'cool': [],\\n    'funny': [],\\n    'useful': [],\\n     'review_text': [],\\n      'stars': [] }\\n# 5. UPDATE row in CASSANDRA\\n\\n\\nreturn \\n\""
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# 4. LOAD df_yelp_api into CASSANDRA\n",
+    "\n",
+    "# 4.1 Check that the review was not already stored\n",
+    "\n",
+    "\"\"\" Existing data\n",
+    "user_id = 'rdIJRrXkdrBhpAsJGNs2gw'\n",
+    "business_id = 'yrO3kYVPv3vD5fsE7dcMWw'\n",
+    "review_date = '2014-04-03'\n",
+    "\"\"\"\n",
+    "\"\"\" Non Existing data \n",
+    "user_id = 'nz35ACyuUYvHMJcTzhaePQ'\n",
+    "business_id = 'AiFYkNiVKa98FQidK0REyQ'\n",
+    "review_date = '2023-03-12'\n",
+    "\"\"\"\n",
+    "'''\n",
+    "user_id = df['user_id']\n",
+    "business_id = df['business_id']\n",
+    "review_date = df['date']\n",
+    "query =     f\"\"\"\n",
+    "            SELECT * \n",
+    "            FROM reviews_yelp\n",
+    "            WHERE user_id = '{user_id}'\n",
+    "                  AND business_id = '{business_id}'\n",
+    "                  AND review_date = '{review_date}'\n",
+    "            LIMIT 1\n",
+    "            \"\"\"\n",
+    "answer = session.execute(query)\n",
+    "\n",
+    "# Check if the result has returned zero rows\n",
+    "if len(answer.current_rows) == 0:\n",
+    "      # The query result is empty.\n",
+    "      print(\"The query result is empty.\")\n",
+    "else:\n",
+    "    for row in answer:\n",
+    "      print(row)\n",
+    "'''\n",
+    "contador = 0\n",
+    "# Iterate over each row in the DataFrame\n",
+    "for index, row in df_yelp_api.iterrows():\n",
+    "    # Extract the values from the current row\n",
+    "    user_id = row['user_id']\n",
+    "    business_id = row['business_id']\n",
+    "    review_date = row['date']\n",
+    "\n",
+    "    # Construct the query with the replaced parameters\n",
+    "    query = f\"\"\"\n",
+    "                SELECT * \n",
+    "                FROM reviews_yelp\n",
+    "                WHERE user_id = '{user_id}'\n",
+    "                    AND business_id = '{business_id}'\n",
+    "                    AND review_date = '{review_date}'\n",
+    "                LIMIT 1\n",
+    "            \"\"\"\n",
+    "\n",
+    "    # Execute the query\n",
+    "    answer = session.execute(query)\n",
+    "\n",
+    "    # Prepare Insert\n",
+    "    statement = \"INSERT INTO reviews_yelp(user_id,business_id,review_date,cool,funny,useful,review_text,stars) VALUES (?,?,?,?,?,?,?,?)\"\n",
+    "    insert = session.prepare(statement)\n",
+    "\n",
+    "    # Check if the result has returned zero rows\n",
+    "    if len(answer.current_rows) == 0:\n",
+    "        #The query result is empty, i.e. the review didn't exist in the Table\n",
+    "        #print(\"The query result is empty.\")\n",
+    "\n",
+    "        # 4.2 Insert the new review\n",
+    "        session.execute(insert, (user_id, business_id, review_date, int(0), int(0), int(0), row['text'], int(row['rating'])))\n",
+    "        contador += 1\n",
+    "\n",
+    "    else:\n",
+    "        # The review already existed\n",
+    "        for row in answer:\n",
+    "            print(row)\n",
+    "\n",
+    "\n",
+    "print(str(contador) + ' Filas cargadas.')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cassandra.cluster.ResultSet at 0x201ca8b1930>"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5. UPDATE row in stores_updates\n",
+    "statement = \"INSERT INTO stores_updates(business_id, date_update, updated) VALUES (?,?,?)\"\n",
+    "insert = session.prepare(statement)\n",
+    "session.execute(insert, (id_to_query, current_date, True))\n",
+    "        \n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
